CB-23953 After 7.2.18 on datahub the cluster upgrade with rolling upgrade and vm replacement should repair nodes one by one and stop services gracefull. The upper limit for rolling upgrade with replace vm is 20. This limit was choosen to limit the time an upgrade will take.